[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Anim_LevelUpPopup_Fade.tres" type="Animation" id=1]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/ChestIcon.png" type="Texture" id=4]
[ext_resource path="res://UI/Anim_Popup_Fade.tres" type="Animation" id=5]
[ext_resource path="res://Scripts/LevelUpPopup.gd" type="Script" id=6]
[ext_resource path="res://UI/Border_Red_RoundedButtonStyleBox.tres" type="StyleBox" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="LevelUpPopup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -62.5
margin_right = 150.0
margin_bottom = 62.5
rect_min_size = Vector2( 300, 125 )
mouse_filter = 2
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -62.5
margin_right = 150.0
margin_bottom = 62.5
custom_styles/panel = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -62.5
margin_right = 150.0
margin_bottom = 62.5
rect_min_size = Vector2( 300, 125 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 300.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Level Up!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 111.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 78.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 278.0
margin_bottom = 56.0
alignment = 1

[node name="Label_Exercise" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 190.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Dumbell Bench Press"
align = 1
valign = 1

[node name="Label_Level" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 190.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Level {x}"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Anim_LevelUpPopup_Fade = ExtResource( 1 )
anims/Popup_Fade = ExtResource( 5 )
anims/RESET = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
